# soumissiondz

./: package-lock.json  package.json
PROJECT_DEMO/: .gitignore  CHANGELOG_v5.md  README.md  bootstrap.py  pyproject.toml
PROJECT_DEMO/alembic/: env.py
PROJECT_DEMO/alembic/versions/: 0001_initial.py  0002_lots23.py  0003_phase3.py  0004_phase4.py
PROJECT_DEMO/app/: __init__.py  config.py  database.py  deps.py  main.py  scoping.py  security.py  seeds_demo.py
PROJECT_DEMO/app/models/: __init__.py  base.py  cabinet.py  dossier.py  entreprise.py  enums.py  metier.py  organisation.py  phase4.py  user.py
PROJECT_DEMO/app/routers/: __init__.py  admin.py  ao.py  assistance.py  auth.py  billing.py  (+11 more)
PROJECT_DEMO/docs/: 01_EXECUTIVE_SUMMARY.docx  01_EXECUTIVE_SUMMARY.md  02_QUICKSTART_DEV.docx  02_QUICKSTART_DEV.md  03_ARCHITECTURE.docx  03_ARCHITECTURE.md  04_SECURITE.docx  04_SECURITE.md  05_DEPLOIEMENT.docx  05_DEPLOIEMENT.md  06_ROADMAP.docx  06_ROADMAP.md  07_INTERFACE_ET_USER_CASES.docx  07_INTERFACE_ET_USER_CASES.md  08_PARCOURS_CLIENT_COMPLET.docx  08_PARCOURS_CLIENT_COMPLET.md  09_CADRAGE_MODELE_PRODUIT.docx  09_CADRAGE_MODELE_PRODUIT.md  10_SYNTHESE_PARCOURS.docx  10_SYNTHESE_PARCOURS.md  11_PARCOURS_CAS1_ENTREPRISE.docx  11_PARCOURS_CAS1_ENTREPRISE.md
PROJECT_DEMO/installer/: build.spec  installer_pyside6.py  setup.bat  setup.sh
PROJECT_DEMO/static/: app.css  app.js  index.html
PROJECT_DEMO/tests/: conftest.py  test_auth.py  test_installer.py  test_isolation.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_signup.py  test_team.py
(+42 files in other folders)
